--- a/src/components/Body/BestSellers /TopBooks.module.css
+++ b/src/components/Body/BestSellers /TopBooks.module.css
@@ -19,10 +19,7 @@
 }
 .topBookTitle {
   color: #b4afaf;
-
-  font-family: DM Sans;
   font-size: 14px;
-  font-style: normal;
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0.42px;
@@ -40,6 +37,9 @@
 
   list-style: none;
   gap: 24px;
+}
+.bookCover {
+  height: 250px;
 }
 .bookName {
   color: #111;
