--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -29,18 +29,16 @@
   color: #111;
   font-size: 14px;
 
-  font-weight: 700;
+  font-weight: 500;
   line-height: 18px;
   letter-spacing: -0.56px;
   text-transform: uppercase;
-
-  border-radius: 36px;
-  background: #eac645;
-
   padding: 8px 16px;
+  transition: all 0.3s;
 
   text-decoration: none;
 }
+
 .headerShopListNav {
   display: flex;
   align-items: center;
@@ -48,12 +46,19 @@
   gap: 4px;
   color: #111;
   font-size: 14px;
+  padding: 8px 16px;
 
   font-weight: 500;
-  line-height: 18px; /* 128.571% */
+  line-height: 1.28;
   letter-spacing: -0.56px;
   text-transform: uppercase;
   text-decoration: none;
+  transition: all 0.3s;
+}
+.active {
+  font-weight: 700;
+  border-radius: 36px;
+  background: #eac645;
 }
 .headerUserDrop {
   display: flex;
@@ -83,4 +88,8 @@
 .header {
   display: flex;
   width: 100%;
+}
+
+.test {
+  background-color: var(--primary);
 }
