--- a/src/components/ShoppingListCard/ShoppingCard.module.css
+++ b/src/components/ShoppingListCard/ShoppingCard.module.css
@@ -1,5 +1,6 @@
 .shoppListContainer {
   margin-left: 40px;
+  width: 100%;
 }
 .shoppListMainTitle {
   color: #111;
@@ -43,6 +44,9 @@
   right: 10px;
   transform: translateX(-50%);
   z-index: 2;
+  border: none;
+  background: transparent;
+  cursor: pointer;
 }
 .bookCover {
   height: 150px;
@@ -98,21 +102,19 @@
 }
 
 .someBook {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  /* transform: translate(-50%, -50%); */
-  width: 350px;
-  display: inline-flex;
+  max-width: 100%;
+  height: 100%;
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 20px;
-  margin: 0 auto;
 }
 
 .textSomeBook {
   color: rgba(0, 0, 0, 0.6);
+
+  max-width: 350px;
 
   text-align: center;
   font-size: 18px;
