--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -3,6 +3,7 @@
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
+  background-color: var(--white);
 }
 .bodyContainer {
   max-width: 1444px;
