--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -1,8 +1,4 @@
 .mainContainer {
-  width: 100%;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin: 0 auto;
   background-color: var(--white);
 }
 .bodyContainer {
@@ -16,3 +12,9 @@
   display: flex;
   flex-direction: column;
 }
+
+@media screen and (min-width: 768px) {
+    .bodyContainer {
+      
+    }
+  }
