--- a/src/components/Body/AllCategories/AllCategoryList.module.css
+++ b/src/components/Body/AllCategories/AllCategoryList.module.css
@@ -48,3 +48,27 @@
   font-weight: 700;
   text-transform: uppercase;
 }
+
+@media screen and (max-width: 768px) {
+  .allCategoryContainer {
+    margin-bottom: 0;
+    width: 100%;
+  }
+
+  .outerWrapper {
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 100%;
+  }
+}
+
+@media screen and (max-width: 375px) {
+ .allCategoryContainer {
+   
+    max-height: 228px;
+  }
+  .homeLink{
+    margin-bottom: 24px;
+    line-height: 1.12;
+  }
+}
