--- a/src/components/CategoriesByGenre/GenreCategory.module.css
+++ b/src/components/CategoriesByGenre/GenreCategory.module.css
@@ -51,21 +51,10 @@
 .bookCover {
   width: 100%;
   height: 254px;
-  /* max-height: 256px;
-  object-fit: cover;
-  object-position: center; */
+  
 }
 
-/* @media (max-width: 1280px) {
-  .bookItem {
-    width: calc((100% - 3 * 24px) / 4);
-  }
-}
-@media (max-width: 1180px) {
-  .bookItem {
-    width: calc((100% - 2 * 24px) / 3);
-  }
-} */
+
 
 .bookName {
   color: var(--black);
@@ -86,6 +75,35 @@
   margin-top: 4px;
 }
 
-/* .btnoverlay {
-  background: rgba(17, 17, 17, 0.4);
-} */
+@media (max-width: 768px) {
+  .cardBookContainer {
+  padding-left: 0;
+}
+  .bookItem {
+    width: calc((100% - 2 * 24px) / 3);
+  }
+
+  .bookItemWrapper {
+ width: 100%;
+ min-height: 366px;
+}
+
+.bookCover {
+  width: 100%;
+  height: 316px;
+  
+}
+}
+
+@media screen and (max-width: 375px) {
+ .bookItem {
+    width: 100%;
+  }
+  .bookCover {
+  width: 100%;
+  height: 485px;
+  
+}
+}
+
+
