--- a/src/components/SupportUkraine/SupportUkraine.module.css
+++ b/src/components/SupportUkraine/SupportUkraine.module.css
@@ -69,3 +69,22 @@
 .active {
   transform: rotate(180deg);
 }
+
+@media screen and (max-width: 768px) {
+  .supporContainer{
+    width: 100%;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 100%;
+  }
+  }
+
+  @media screen  and (max-width: 375px){
+  .supporContainer{
+    min-width: 100%;
+    
+  }
+  }
+
+  
+
