--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -2,7 +2,8 @@
   background-color: var(--white);
 }
 .bodyContainer {
-  max-width: 1444px;
+  max-width: 1440px;
+  margin: 0 auto;
   padding-left: 24px;
   padding-right: 24px;
   padding-top: 40px;
@@ -25,8 +26,12 @@
     flex-direction: column;
     gap: 100px;
   }
+  .bodyContainer.shoppingListPage{
+     gap: 0;
+
+  }
 }
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 576px) {
   .sideBar {
     flex-direction: column;
   }
