--- a/src/components/CategoriesByGenre/GenreCategory.module.css
+++ b/src/components/CategoriesByGenre/GenreCategory.module.css
@@ -95,15 +95,25 @@
 }
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 576px) {
  .bookItem {
     width: 100%;
+    max-width: 324px;
+    margin: 0 auto;
+    
   }
   .bookCover {
   width: 100%;
   height: 485px;
   
 }
+}
+
+@media screen and (max-width: 375px) {
+ .bookItem {
+   margin: 0;
+    }
+
 }
 
 
