--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,6 +4,9 @@
   height: 72px;
   padding: 14px 24px 13px 24px;
 
+  max-width: 1440px;
+  margin: 0 auto;
+
   align-items: center;
 
   border-radius: 0px 0px 8px 8px;
@@ -91,62 +94,46 @@
   display: flex;
   width: 100%;
 }
-.headerBurgerBtn{
+.headerBurgerBtn {
   display: none;
 }
 
 @media screen and (max-width: 1280px) {
-
-  .headerContainer{
-      padding: 14px 32px 13px 32px;
-
+  .headerContainer {
+    padding: 14px 32px 13px 32px;
   }
   .headerLogoLink {
-  margin-right: 40px;
- 
-}
-   
+    margin-right: 40px;
   }
+}
 
-  @media screen and (max-width: 768px) {
 
-  .headerContainer{
-      padding: 18px 20px 18px 20px;
-
+@media screen and (max-width: 576px) {
+  .headerContainer {
+    padding: 18px 20px 18px 20px;
   }
   .headerLogoLink {
-  margin-right: 0;
- 
-}
-.headerHomeNav{
-  display: none;
-}
-.headerShopListNav {
-  display: none;
-}
-.headerUserBtn{
-  display: none;
-}
-.headerUserDrop{
-  gap:14px;
-}
-.headerBurgerBtn{
-  cursor: pointer;
-  border:none;
-  padding: 0;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  background-color: transparent;
-
-}
-   
+    margin-right: 0;
   }
-
-  
-
-
-
-
-
-
+  .headerHomeNav {
+    display: none;
+  }
+  .headerShopListNav {
+    display: none;
+  }
+  .headerUserBtn {
+    display: none;
+  }
+  .headerUserDrop {
+    gap: 14px;
+  }
+  .headerBurgerBtn {
+    cursor: pointer;
+    border: none;
+    padding: 0;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+  }
+}
