--- a/src/pages/LoginPage.module.css
+++ b/src/pages/LoginPage.module.css
@@ -1,7 +1,18 @@
 .containerForm {
-  max-height: calc(100vh - 72px);
+  min-height: calc(100vh - 72px);
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
+
 }
+
+@media screen and (max-width: 768px){
+  .containerForm{
+    align-items: flex-start;
+
+  }
+  
+}
+
+
